--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             This page is meant for github. I still love soccer!
         </p>
 
+        <p>I have no idea what i'm doing </p>
     </div>
+    
 </body>
 </html>
