--- a/index.html
+++ b/index.html
@@ -3,18 +3,26 @@
 
 <head>
 
-    <title>Test Repo</title>
+    <title>My Bio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Our First Test Page</h1>
+    <h1 class="nugget">My Biography </h1>
     <div>
-        <p>
-            This page is meant for github. I still love soccer!
-        </p>
+        <section id="main-bio">
+                <h2 class="nugget">Logan Shahan</h2>
+                <img id="bio-image" src="https://placehold.it/200x200" />
+        </section>
+        <section id="contact-info">
+                <ul>
+                <li>Email: loganshahan88@gmail.com</li>
+                <li>Github <a target="_blank" 
+                href="https://github.com/BootCampGuru/LondonCalling">>bootcampgur</a></li>    
+                </ul>
 
-        <p>I have no idea what i'm doing </p>
-        
+        </section>
     </div>
+    
 
 </body>
 </html>
